Chapter12/petservice_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petsvc-deployment
  labels:
    app: petservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petservice
  template:
    metadata:
      labels:
        app: petservice
    spec:
      containers:
      - name: petservice
        image: petservice:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          protocol: TCP
