Chapter12/petservice_deployment_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petsvc-deployment
  labels:
    app: petservice
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petservice
      version: v2
  template:
    metadata:
      labels:
        app: petservice
        version: v2
    spec:
      containers:
      - name: petservice
        image: petservice:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          protocol: TCP
