Chapter12/petservice_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petservice
  labels:
    app: petservice
    service: petservice
spec:
  ports:
  - port: 5000
    name: tcp
    protocol: TCP
    targetPort: 5000
  selector:
    app: petservice
  type: LoadBalancer
