Chapter12/DestinationRule_cb_maxconnections.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: petservice
spec:
  host: petservice
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        connectionPool:
          http:
            http1MaxPendingRequests: 2
            maxRequestsPerConnection: 2
