Chapter12/DestinationRule_cb_outlierdetection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: petservice
spec:
  host: petservice
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 2
      interval: 1m
      baseEjectionTime: 5m
      maxEjectionPercent: 100
