Chapter12/petservice-fault-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petservice-fault-vs
spec:
  hosts:
  - petservice
  http:
  - match:
    fault:
      abort:
        percent: 50
        httpStatus: 503
    route:
    - destination:
        host: petservice
