Chapter12/petservice-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petservice
spec:
  hosts:
  - petservice
  http:
  - route:
    - destination:
        host: petservice
    retries:
      attempts: 3
      perTryTimeout: 5s
      retryOn: 5xx
