Chapter12/petservice-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petservice-timeout
spec:
  hosts:
  - petservice
  http:
  - route:
    - destination:
        host: petservice
        subset: v1
    timeout: 15s
