Chapter12/petservice-v2-tester-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petservice
spec:
  hosts:
  - petservice
  http:
  - match:
    - headers:
        user:
          exact: testuser    
    fault:
      abort:
        percent: 50
        httpStatus: 503
    route:
    - destination:
        host: petservice
        subset: v2
  - route:
    - destination:
        host: petservice
        subset: v1
