Chapter12/petservice-v2-tester-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petservice-vs-v2-delay
spec:
  hosts:
  - petservice
  http:
  - match:
    - headers:
        end-user:
          exact: testuser    
    fault:
      delay:
        percent: 100
        fixedDelay: 2s
    route:
    - destination:
        host: petservice
        subset: v2
  - route:
    - destination:
        host: petservice
        subset: v1
