Chapter12/petservice-vs-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petservice-vs
spec:
  hosts:
  - petservice
  http:
  - match:
    - headers:
        user:
          exact: testuser
    route:
    - destination:
        host: petservice
        subset: v2
  - route:
    - destination:
        host: petservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: petservice-destinationrule
spec:
  host: petservice
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
