Chapter12/petservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petservice-vs
spec:
  hosts:
  - "*"
  gateways:
  - petservice-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 5000
        host: petservice.default.svc.cluster.local
